Separate pages for tagsearch and hubs, small changes in admin page

--- a/templates/admin/add_new_post.ejs
+++ b/templates/admin/add_new_post.ejs
@@ -55,6 +55,7 @@
 					<option class="btn">music</option>
 					<option class="btn">img</option>
 					<option class="btn">lastissue</option>
+					<option class="btn">literature</option>
 				</select>
 			</div>
 			<div class="form-group">
