NavBar for hub and tagsearch fixed; contacts added

--- a/public/main.css
+++ b/public/main.css
@@ -383,7 +383,14 @@ iframe{
     color: #fff;
 }
     
+#email h2 {
+    font-family: 'Open Sans', sans-serif;
+    margin: 0;
+}
+#email p {
+    margin-top: 25px;
 
+}
 /*----------------------------------------------------*/
 /*----------------------------------------------------*/
 /*----------------------------------------------------*/
