--- a/templates/pages/about.ejs
+++ b/templates/pages/about.ejs
@@ -7,6 +7,7 @@
         <link href='http://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Cutive+Mono' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
         <script src="/public/js/main.js"></script>
         <link rel="shortcut icon" href="/public/img/favicon1.png" type="image/png">
@@ -56,6 +57,10 @@
                     <p>Оставьте свою электропочту, чтобы мы включили вас в свою новостную рассылку (пока ее нет, но скоро, возможно, появится).</p>
                     <input type="email" placeholder="Your email">
                     <input type="submit">
+                    <div id="email">
+                        <p>Наш электронный адрес:</p>
+                        <h2>zensick@yandex.ru</h2>
+                    </div>
                 </div>
             </div>
         </div>
