--- a/templates/pages/hub.ejs
+++ b/templates/pages/hub.ejs
@@ -15,17 +15,21 @@
 </head>
 <body>
     <div class="bars">
-        <div class="invis">
+            <div class="invis">
             <div class="NavBar">
-                <ul id="nyaa1">
-                    <li><a href="/lastissue">LAST ISSUE</a></li>
-                    <li><a href="/img">ART</a></li>
-                    <li><a href="/music">MUSIC</a></li>
-                    <li><a href="/literature">LITERATURE</a></li>
-					<li><a href="/article">ARTICLES</a></li>
-				</ul>
+                <div id="zensick">
+                    <a href="/"><img src="/public/img/nav1.png"></a>
+                </div>
+                    <ul id="nyaa">
+                        <li><div id="hyperlink"><a href="/">Zen Sick</a></div></li>
+                        <li><a href="/lastissue">LAST ISSUE</a></li>
+                        <li><a href="/img">ART</a></li>
+                        <li><a href="/music">MUSIC</a></li>
+                        <li><a href="/literature">LITERATURE</a></li>
+                        <li><a href="/article">ARTICLES</a></li>
+                    </ul>
             </div>
-        </div>
+            </div>
     </div>
     
     <div class="bars">
