--- a/public/main.css
+++ b/public/main.css
@@ -398,6 +398,10 @@ iframe{
 .nfound img {
     box-shadow: 5px 5px 5px #888888;
 }
+.nfound h2 a {
+    text-decoration: none;
+    color: #000;
+}
     
 /*----------------------------------------------------*/
 /*----------------------------------------------------*/
