--- a/public/main.css
+++ b/public/main.css
@@ -287,7 +287,7 @@ iframe{
 
 /* captures & time & tags */
 
-#imgcap {
+img + strong /* former #imgcap */ {
     display: block;
     margin-left: auto;
     margin-right: auto;
