Made editing able, updated log

--- a/templates/admin/edit_post.ejs
+++ b/templates/admin/edit_post.ejs
@@ -40,7 +40,7 @@
     <title>New post</title>
 </head>
 <body>
-<form id='main_form' method="post" action="submit"></form>
+<form id='main_form' method="post" action=""></form>
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-xs-12 col-md-6 col" id='control' style="padding-top:10px;background-color:white;">
