--- a/templates/admin/index.ejs
+++ b/templates/admin/index.ejs
@@ -55,6 +55,7 @@
 <center>
 	<a class="btn btn-primary btn-lg" href="/admin/add">Add new post here</a>
 	<a class="btn btn-default btn-lg" href="/admin/user">Check user info</a>
+	<a class="btn btn-default btn-lg" href="/logoff">Log off</a>
 </center>
 
 <br>
@@ -90,7 +91,7 @@
 					<form action="/admin/switch/<%- posts[i].id %>" method="post">
 						<input type='submit' value="Switch" class="btn btn-default">
 					</form>
-					<a class="btn btn-default disabled" role="button" href="/admin/edit/<%- posts[i].id %>">Edit</a>
+					<a class="btn btn-default" role="button" href="/admin/edit/<%- posts[i].id %>">Edit</a>
 					<a class="btn btn-danger" role="button" href="/admin/delete/<%- posts[i].id %>">Delete</a>
 				</td>
 			</tr>
@@ -119,7 +120,7 @@
 					<form action="/admin/switch/<%- posts[i].id %>" method="post">
 						<input type='submit' value="Switch" class="btn btn-default">
 					</form>
-					<a class="btn btn-default disabled" role="button" href="/admin/edit/<%- posts[i].id %>">Edit</a>
+					<a class="btn btn-default" role="button" href="/admin/edit/<%- posts[i].id %>">Edit</a>
 					<a class="btn btn-danger" role="button" href="/admin/delete/<%- posts[i].id %>">Delete</a>
 				</td>
 			</tr>
@@ -147,7 +148,7 @@
 					<form action="/admin/switch/<%- posts[i].id %>" method="post">
 						<input type='submit' value="Switch" class="btn btn-default">
 					</form>
-					<a class="btn btn-default disabled" role="button" href="/admin/edit/<%- posts[i].id %>">Edit</a>
+					<a class="btn btn-default" role="button" href="/admin/edit/<%- posts[i].id %>">Edit</a>
 					<a class="btn btn-danger" role="button" href="/admin/delete/<%- posts[i].id %>">Delete</a>
 				</td>
 			</tr>
@@ -175,7 +176,7 @@
 					<form action="/admin/switch/<%- posts[i].id %>" method="post">
 						<input type='submit' value="Switch" class="btn btn-default">
 					</form>
-					<a class="btn btn-default disabled" role="button" href="/admin/edit/<%- posts[i].id %>">Edit</a>
+					<a class="btn btn-default" role="button" href="/admin/edit/<%- posts[i].id %>">Edit</a>
 					<a class="btn btn-danger" role="button" href="/admin/delete/<%- posts[i].id %>">Delete</a>
 				</td>
 			</tr>
@@ -203,7 +204,7 @@
 					<form action="/admin/switch/<%- posts[i].id %>" method="post">
 						<input type='submit' value="Switch" class="btn btn-default">
 					</form>
-					<a class="btn btn-default disabled" role="button" href="/admin/edit/<%- posts[i].id %>">Edit</a>
+					<a class="btn btn-default" role="button" href="/admin/edit/<%- posts[i].id %>">Edit</a>
 					<a class="btn btn-danger" role="button" href="/admin/delete/<%- posts[i].id %>">Delete</a>
 				</td>
 			</tr>
@@ -231,7 +232,7 @@
 					<form action="/admin/switch/<%- posts[i].id %>" method="post">
 						<input type='submit' value="Switch" class="btn btn-default">
 					</form>
-					<a class="btn btn-default disabled" role="button" href="/admin/edit/<%- posts[i].id %>">Edit</a>
+					<a class="btn btn-default" role="button" href="/admin/edit/<%- posts[i].id %>">Edit</a>
 					<a class="btn btn-danger" role="button" href="/admin/delete/<%- posts[i].id %>">Delete</a>
 				</td>
 			</tr>
