--- a/templates/admin/index.ejs
+++ b/templates/admin/index.ejs
@@ -1,33 +1,34 @@
+<title>ZenSick's dark side</title>
 <link href="/public/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script src="/public/js/admin.js"></script>
 <style>
 	.body>div {
-		max-height:300px;
-		max-width:100%;
-		overflow-y:auto;
+		max-height: 300px;
+		max-width: 100%;
+		overflow-y: auto;
 	}
 	
 	.time {
-		width:160px;
+		width: 160px;
 	}
 	
 	.id {
-		width:30px;
-		font-weight:bold;
+		width: 30px;
+		font-weight: bold;
 	}
 	
 	.type {
-		width:50px;
+		width: 50px;
 	}
 	
 	.title {
-		width:200px;
+		width: 200px;
 	}
 	
 	.switch {
-		text-align:center;
-		width:110px;
+		text-align: center;
+		width: 110px;
 	}
 	
 	.hddn {
