--- a/templates/pages/tagsearch.ejs
+++ b/templates/pages/tagsearch.ejs
@@ -35,7 +35,7 @@
     <div class="bars">
         <div class="Header">
             <h1><a href="/">Zen Sick</a></h1>
-            <p>Looking for tag #<%- tag %></p>
+            <p>Посты с тегом #<%- tag %></p>
         </div>
 	</div>
 	
