--- a/public/main.css
+++ b/public/main.css
@@ -2,7 +2,6 @@ body {
     background-image: url(/public/img/teentimesbg2.png);  
     background-size: auto;
     background-repeat: auto;
-    min-width: 600px;
 }
 
 /* column main */
@@ -33,9 +32,9 @@ body {
 
 .article {
     background: #fff;
+	width:100%;
     font-family: PT Sans, monospace;
     text-align: left;
-    width: 750px;
     border: white solid;
     margin-left: auto;
     margin-right: auto;
@@ -408,94 +407,26 @@ img + strong /* former #imgcap */ {
 /*----------------------------------------------------*/
 
 
+
 /* media query */
 
-/*@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 750px) {
     body {
-        max-width: 768px;
         background-image: url(/public/img/mobg.png);
-    }     
-    .Header p {
-        font-family: PT Sans, monospace;
-        font-size: 18px;
-        text-align: center;
-        padding: : 50px;
     }
-    .article {
-        background: #fff;
-        font-family: PT Sans, monospace;
-        text-align: left;
-        max-width: 700px;
-        border: white solid;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 20px;
-        box-shadow: 5px 5px 5px #888888;
-    }
-    .article h3 {
-        text-align: center;
-        font-size: 20px;
-    }
-    .picture img {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 20px;
-        max-width: 680px; 
-    }
-    .NavBar {
-        background-color: #195da1;
-        position: fixed;
-        z-index: 1;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        opacity: 0.85;
-        width: 100vw;
-        text-align: center;
-    }         
-    .img {
-        background: #fff;
-        font-family: PT Sans, monospace;
-        text-align: left;
-        max-width: 700px;
-        border: white solid;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 20px;
-        margin-bottom: 20px;
-        box-shadow: 5px 5px 5px #888888;
-    }
-    .music {
-        background-color: : #fff;
-        font-family: PT Sans, monospace;
-        text-align: left;
-        width: 700px;
-        border: white solid;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 20px;
-        margin-bottom: 20px;
-        box-shadow: 5px 5px 5px #888888;
-        
-    }
-    .lowbar {
-        background-color: #fff;
-        z-index: 1;
-        display: block;
-        margin-top: 10px;
-        opacity: 0.85;
-        text-align: center;
-        max-width: 100vw;
-    }
-    .column {
-        max-width: inherit;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .bars {
-        max-width: 768px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}*/
+	.column {
+		width:97%!important;
+	}
+	.footerref {
+		width:97%!important;
+	}
+	.footerref .textmain {
+		padding:0px;
+	}
+	.footerref>.textmain>div {
+		margin:15px;
+	}
+	.lowbar {
+		padding-top: 5px;
+	}
+}
