--- a/templates/pages/main.ejs
+++ b/templates/pages/main.ejs
@@ -9,23 +9,33 @@
     <link href='http://fonts.googleapis.com/css?family=Cutive+Mono' rel='stylesheet' type='text/css'>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="/public/js/main.js"></script>
+	<script src="/public/js/SlickNav-master/jquery.slicknav.js"></script>
+	<link href="/public/slicknav.css" rel="stylesheet" type="text/css">
+	<script>
+		$(function () {
+			$('#nyaa1').slicknav({
+				prependTo: '#nav_bar',
+				label: ''
+			});
+		});
+	</script>
     <link rel="shortcut icon" href="/public/img/favicon1.png" type="image/png">
 	<title>Zen Sick</title>
 </head>
 <body>
-    <div class="bars">
-        <div class="invis">
-            <div class="NavBar">
-                <ul id="nyaa1">
-                        <li><a href="/lastissue">LAST ISSUE</a></li>
-                        <li><a href="/img">ART</a></li>
-                        <li><a href="/music">MUSIC</a></li>
-                        <li><a href="/literature">LITERATURE</a></li>
-                        <li><a href="/article">ARTICLES</a></li>
-                    </ul>
-            </div>
-        </div>
+    <div class="bars" id='nav_bar_cnt'>
+		<div class="NavBar" id='nav_bar'>
+			<ul id="nyaa1">
+            	<li><a href="/lastissue">LAST ISSUE</a></li>
+                <li><a href="/img">ART</a></li>
+                <li><a href="/music">MUSIC</a></li>
+                <li><a href="/literature">LITERATURE</a></li>
+                <li><a href="/article">ARTICLES</a></li>
+			</ul>
+		</div>
     </div>
+	
+	<div class="bars" style="opacity:0; height:50px;">this must be invisible</div>
     
     <div class="bars">
         <div class="Header">
