--- a/templates/pages/article.ejs
+++ b/templates/pages/article.ejs
@@ -43,8 +43,9 @@
 		
         <div class="column">
             <div class="<%- post.type %>">
-			     <h3><a href="/article/<%- post.id %>"><%- post.title %></a></h3>
-			     <%- post.body %>
+                <h3><a href="/article/<%- post.id %>"><%- post.title %></a></h3>
+			    <%- post.body %>
+                <div class='author' id='<%- user.username %>'></div>
 				<div class='tags' id='t<%- post.id %>'></div>
                 <div id="time">
 				    <time><%- String(post.created).slice(16, 21) %></time>
