Translated UI to russian

--- a/templates/admin/add_new_post.ejs
+++ b/templates/admin/add_new_post.ejs
@@ -36,7 +36,7 @@
 			resize: none;
 		}
 	</style>
-    <title>New post</title>
+    <title>Новый пост - ZenSick</title>
 </head>
 <body>
 <form id='main_form' method="post" action="submit"></form>
@@ -44,10 +44,10 @@
 	<div class="row">
 		<div class="col-xs-12 col-md-6 col" id='control' style="padding-top:10px;background-color:white;">
 			<div class="form-group">
-				<input id='title' name="title" type="text" form='main_form' placeholder="Title" class="form-control">
+				<input id='title' name="title" type="text" form='main_form' placeholder="Заголовок" class="form-control">
 			</div>
 			<div class="form-group">
-				<input id='tags' name="tags" type="text" form='main_form' placeholder="Tags" class="form-control">
+				<input id='tags' name="tags" type="text" form='main_form' placeholder="Теги" class="form-control">
 			</div>
 			<div class="form-group">
 				<select name="type" required class="btn btn-default dropdown-toggle" form='main_form'>
@@ -59,8 +59,8 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<input class='update btn btn-default' value="Update" type="button" onclick="update();">
-				<input type="submit" value="Submit" form='main_form' class="btn btn-primary">
+				<input class='update btn btn-default' value="Обновить превью" type="button" onclick="update();">
+				<input type="submit" value="Сохранить" form='main_form' class="btn btn-primary">
 			</div>
 			<textarea id='input' name="body" type='text' form='main_form' class="form-control"></textarea>
 		</div>
