--- a/templates/admin/submit_new_post.ejs
+++ b/templates/admin/submit_new_post.ejs
@@ -32,8 +32,8 @@
 			<input name="tags" type="text" value="<%- tags %>" style='display:none;'>
 			<textarea name="body" cols="40" rows="3" style="display:none;"><%- unrendered %></textarea>
 		</form>
-		<input type="submit" value="Cancel" class="btn btn-default btn-lg" form="back">
-		<input type="submit" value="Proceed" class="btn btn-primary btn-lg" form="forward">
+		<input type="submit" value="Отмена" class="btn btn-default btn-lg" form="back">
+		<input type="submit" value="Сохранить" class="btn btn-primary btn-lg" form="forward">
 	</div>
 	
 	<div class='column'>
