--- a/templates/admin/user_page.ejs
+++ b/templates/admin/user_page.ejs
@@ -3,7 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/public/img/favicon1.png">
-    <title><%- user.username %></title>
+    <title><%- user.username %> - ZenSick</title>
     <link href="/public/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -56,13 +56,13 @@
 		</p>
 	</div>
 	<div class="row">
-		<p>Userpic URL here:</p>
+		<p>URL юзерпика:</p>
 		<textarea name="imgurl" id='userpic_url' class="imgurl col-md-12 col-xs-12"><%- user.imgurl %></textarea>
 	</div>
 	<div class="row">
-		<a href="./" class="btn btn-lg btn-primary" role="button">Back</a>
-		<a onclick="update_userpic();" class="btn btn-lg btn-default" role="button">Check userpic!</a>
-		<input type="submit" class="btn btn-lg btn-default" value='Update'>
+		<a href="./" class="btn btn-lg btn-primary" role="button">Назад</a>
+		<a onclick="update_userpic();" class="btn btn-lg btn-default" role="button">Проверь юзерпик!</a>
+		<input type="submit" class="btn btn-lg btn-default" value='Сохранить'>
 	</div>
 </div>
 </form>
